[gd_scene load_steps=3 format=3 uid="uid://d14xar1dudjr5"]

[ext_resource type="Script" path="res://scripts/killed.gd" id="1_5pw1q"]
[ext_resource type="AudioStream" uid="uid://bbi0i8ngb3xoh" path="res://assets/sounds/killedSFX.wav" id="2_4h3qf"]

[node name="killed" type="Area2D"]
collision_mask = 2
script = ExtResource("1_5pw1q")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.629
one_shot = true

[node name="killedSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_4h3qf")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
